InspectImages task works as expected. Need to extend to SingleObject makePublic and adding data via modals.

--- a/sled_tasks/static/sled_tasks/css/task_detail.css
+++ b/sled_tasks/static/sled_tasks/css/task_detail.css
@@ -38,3 +38,24 @@
     padding-left: 100px;
     padding-right: 100px;
 }
+
+.inspect-table {
+    table-layout: auto;
+}
+
+.inspect-table td:first-child {
+    padding-left: 20px;
+    width: 50px;
+}
+
+.inspect-table tr td:nth-child(2) {
+    width: 1%;
+    white-space: nowrap;
+}
+
+.inspect-table tr td:last-child {
+    padding-left: 20px;
+}
+
+
+
