--- a/sled_tasks/templates/sled_tasks/task_list.html
+++ b/sled_tasks/templates/sled_tasks/task_list.html
@@ -129,6 +129,10 @@
 {% endblock content %}
 
 
+{% block extrastyles %}
+<link href="{% static 'sled_tasks/css/task_detail.css' %}" rel="stylesheet" />
+{% endblock extrastyles %}
+
 
 {% block extrascripts %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
