--- a/sled_single_objects/templates/sled_single_objects/so_make_public.html
+++ b/sled_single_objects/templates/sled_single_objects/so_make_public.html
@@ -13,7 +13,7 @@ Make {% singular_or_plural form.obj_type.value items|length %} public?
   <div class="invalid jb-modal-field">
     <ul>
       {% for error in form.non_field_errors %}
-      <li>{{ error }}</li>
+      <li>{{ error|safe }}</li>
       {% endfor %}
     </ul>
   </div>
