All profanity checks should work as expected. Working on file size checks.

--- a/lenses/templates/lenses/lens_make_private.html
+++ b/lenses/templates/lenses/lens_make_private.html
@@ -14,6 +14,13 @@ Make lenses private?
   </ul>
 </div>
 
+<div class="invalid jb-modal-field">
+  <ul>
+    {% for error in form.justification.errors %}
+    <li>{{ error|safe }}</li>
+    {% endfor %}
+  </ul>
+</div>
 <div class="jb-modal-field">
   {{ form.justification }}
 </div>
