--- a/sled_groups/templates/sled_groups/group_update.html
+++ b/sled_groups/templates/sled_groups/group_update.html
@@ -21,6 +21,14 @@ Update group {{ sledgroup.name }}
   {% endif %}
   
   {% for field in form %}
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in field.errors %}
+      <li>{{ error|safe }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+  
   <div class="jb-modal-field">
     {{ field }}
   </div>
