--- a/sled_single_objects/templates/sled_single_objects/so_cede_ownership.html
+++ b/sled_single_objects/templates/sled_single_objects/so_cede_ownership.html
@@ -36,7 +36,14 @@ Cede ownership?
       {% endfor %}
     </table>
   </div>
-  
+
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.justification.errors %}
+      <li>{{ error|safe }}</li>
+      {% endfor %}
+    </ul>
+  </div>
   <div class="jb-modal-field">
     {{ form.justification }}
   </div>
