--- a/sled_single_objects/templates/sled_single_objects/so_make_private.html
+++ b/sled_single_objects/templates/sled_single_objects/so_make_private.html
@@ -31,6 +31,13 @@ Make {% singular_or_plural form.obj_type.value items|length %} private?
     </table>
   </div>
   
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.justification.errors %}
+      <li>{{ error|safe }}</li>
+      {% endfor %}
+    </ul>
+  </div>
   <div class="jb-modal-field">
     {{ form.justification }}
   </div>
