--- a/lenses/templates/lenses/lens_ask_access.html
+++ b/lenses/templates/lenses/lens_ask_access.html
@@ -7,6 +7,13 @@ Ask private Lens owner for access?
 
 
 {% block content %}
+<div class="invalid jb-modal-field">
+  <ul>
+    {% for error in form.justification.errors %}
+    <li>{{ error|safe }}</li>
+    {% endfor %}
+  </ul>
+</div>
 <div class="jb-modal-field">
   {{ form.justification }}
 </div>
