--- a/sled_collections/templates/sled_collections/collection_create.html
+++ b/sled_collections/templates/sled_collections/collection_create.html
@@ -34,7 +34,7 @@ Make a collection of {{ form.item_type.value }}?
   <div class="invalid jb-modal-field">
     <ul>
       {% for error in form.name.errors %}
-      <li>{{ error }}</li>
+      <li>{{ error|safe }}</li>
       {% endfor %}
     </ul>
   </div>
@@ -42,6 +42,13 @@ Make a collection of {{ form.item_type.value }}?
     {{ form.name }}
   </div>
   
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.description.errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
+  </div>
   <div class="jb-modal-field">
     {{ form.description }}
   </div>
