--- a/sled_data/templates/sled_data/data_update_many.html
+++ b/sled_data/templates/sled_data/data_update_many.html
@@ -71,7 +71,15 @@
 			    {% for field in form.visible_fields %}
 			    {% if field.name != 'image' %}
 			    <tr>
-			      <td>{{ field.error }}</td>
+			      <td>
+				<div class="invalid jb-modal-field">
+				  <ul>
+				    {% for error in field.errors %}
+				    <li>{{ error|safe }}</li>
+				    {% endfor %}
+				  </ul>
+				</div>
+			      </td>
 			      <td>
 				<div class="sled-help-tooltip">{{ field.label|safe }}</div>
 				<div class="sled-help-tooltip-content">{{ field.help_text|safe }}</div>
