--- a/sled_data/templates/sled_data/spectrum_create.html
+++ b/sled_data/templates/sled_data/spectrum_create.html
@@ -25,7 +25,15 @@ Add Spectrum?
       <tbody>
 	{% for field in form.visible_fields %}
 	<tr>
-	  <td>{{ field.error }}</td>
+	  <td>
+	    <div class="invalid jb-modal-field">
+	      <ul>
+		{% for error in field.errors %}
+		<li>{{ error|safe }}</li>
+		{% endfor %}
+	      </ul>
+	    </div>
+	  </td>
           <td>
 	    <div class="sled-help-tooltip">{{ field.label|safe }}</div>
 	    <div class="sled-help-tooltip-content">{{ field.help_text|safe }}</div>
