--- a/sled_tasks/templates/sled_tasks/task_detail_recipient.html
+++ b/sled_tasks/templates/sled_tasks/task_detail_recipient.html
@@ -122,7 +122,14 @@
     {{ form.response }}
   </div>
 
-  <div class="jb-modal-field padded">
+   <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.response_comment.errors %}
+      <li>{{ error|safe }}</li>
+      {% endfor %}
+    </ul>
+   </div>
+   <div class="jb-modal-field padded">
     {{ form.response_comment }}
   </div>
 
