--- a/sled_groups/templates/sled_groups/group_cede_ownership.html
+++ b/sled_groups/templates/sled_groups/group_cede_ownership.html
@@ -15,7 +15,7 @@ Cede ownership of group {{ sledgroup.name }}?
   <div class="invalid jb-modal-field">
     <ul>
       {% for error in form.non_field_errors %}
-      <li>{{ error }}</li>
+      <li>{{ error|safe }}</li>
       {% endfor %}
     </ul>
   </div>
