--- a/sled_tasks/templates/sled_tasks/task_list_pending.html
+++ b/sled_tasks/templates/sled_tasks/task_list_pending.html
@@ -70,6 +70,20 @@
 	  </button>
 	</form>
 	{% endif %}
+
+	{% elif task.task_type == 'RequestUpdate' %}
+
+	{% if user == task.owner %}
+	<button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-request-update-owner' task.id %}">
+	  <img src="{% static 'icons/eye-fill.svg' %}">
+	  View
+	</button>
+	{% else %}
+	<button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-recipient' task.id %}">
+	  <img src="{% static 'icons/eye-fill.svg' %}">
+	  Respond
+	</button>
+	{% endif %}
 	
 	{% else %}
 
