--- a/lenses/templates/lenses/lens_add_update_modal.html
+++ b/lenses/templates/lenses/lens_add_update_modal.html
@@ -13,7 +13,7 @@ Update Lens {{ lens.name }}
   <div class="invalid jb-modal-field">
     <ul>
       {% for error in form.non_field_errors %}
-      <li>{{ error }}</li>
+      <li>{{ error|safe }}</li>
       {% endfor %}
     </ul>
   </div>
@@ -32,7 +32,11 @@ Update Lens {{ lens.name }}
           <div>
             <table>
               <tr>
-                <td>{{ form.name.errors }}</td>
+                <td>
+		  <div class="invalid jb-modal-field">
+		    {{ form.name.errors }}
+		  </div>
+		</td>
                 <td>
 		  <div class="sled-help-tooltip">{{ form.name.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.name.help_text|safe }}</div>
@@ -40,7 +44,11 @@ Update Lens {{ lens.name }}
                 <td>{{ form.name }}</td>
               </tr>
               <tr>
-                <td>{{ form.alt_name.errors }}</td>
+		<td>
+		  <div class="invalid jb-modal-field">
+		    {{ form.alt_name.errors }}
+		  </div>
+                </td>
                 <td>
 		  <div class="sled-help-tooltip">{{ form.alt_name.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.alt_name.help_text|safe }}</div>
@@ -48,7 +56,11 @@ Update Lens {{ lens.name }}
                 <td>{{ form.alt_name }}</td>
               </tr>
               <tr>
-                <td>{{ form.ra.errors }}</td>
+		<td>
+		  <div class="invalid jb-modal-field">
+		    {{ form.ra.errors }}
+		  </div>
+                </td>		
                 <td>
 		  <div class="sled-help-tooltip">{{ form.ra.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.ra.help_text|safe }}</div>
@@ -56,7 +68,11 @@ Update Lens {{ lens.name }}
                 <td>{{ form.ra }}</td>
               </tr>
               <tr>
-                <td>{{ form.dec.errors }}</td>
+		<td>
+		  <div class="invalid jb-modal-field">
+		    {{ form.dec.errors }}
+		  </div>
+                </td>
 		<td>
 		  <div class="sled-help-tooltip">{{ form.dec.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.dec.help_text|safe }}</div>
@@ -64,7 +80,11 @@ Update Lens {{ lens.name }}
                 <td>{{ form.dec }}</td>
               </tr>
               <tr>
-                <td>{{ form.image_sep.errors }}</td>
+		<td>
+		  <div class="invalid jb-modal-field">
+                    {{ form.image_sep.errors }}
+		  </div>
+                </td>
 		<td>
 		  <div class="sled-help-tooltip">{{ form.image_sep.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.image_sep.help_text|safe }}</div>
@@ -72,23 +92,11 @@ Update Lens {{ lens.name }}
                 <td>{{ form.image_sep }}</td>
               </tr>
               <tr>
-                <td>{{ form.z_lens.errors }}</td>
 		<td>
-		  <div class="sled-help-tooltip">{{ form.z_lens.label|safe }}</div>
-		  <div class="sled-help-tooltip-content">{{ form.z_lens.help_text|safe }}</div>
-		</td>
-                <td>{{ form.z_lens }}</td>
-              </tr>
-              <tr>
-                <td>{{ form.z_source.errors }}</td>
-		<td>
-		  <div class="sled-help-tooltip">{{ form.z_source.label|safe }}</div>
-		  <div class="sled-help-tooltip-content">{{ form.z_source.help_text|safe }}</div>
-		</td>
-                <td>{{ form.z_source }}</td>
-              </tr>
-              <tr>
-                <td>{{ form.flag.errors }}</td>
+		  <div class="invalid jb-modal-field">
+		    {{ form.flag.errors }}
+		  </div>
+                </td>
 		<td>
 		  <div class="sled-help-tooltip">{{ form.flag.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.flag.help_text|safe }}</div>
@@ -105,7 +113,11 @@ Update Lens {{ lens.name }}
           <div>
             <table>
               <tr>
-                <td>{{ form.n_img.errors }}</td>
+		<td>
+		  <div class="invalid jb-modal-field">
+		    {{ form.n_img.errors }}
+		  </div>
+                </td>
 		<td>
 		  <div class="sled-help-tooltip">{{ form.n_img.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.n_img.help_text|safe }}</div>
@@ -113,7 +125,11 @@ Update Lens {{ lens.name }}
                 <td>{{ form.n_img }}</td>
               </tr>
               <tr>
-                <td>{{ form.lens_type.errors }}</td>
+		<td>
+		  <div class="invalid jb-modal-field">
+		    {{ form.lens_type.errors }}
+		  </div>
+                </td>
                 <td>
 		  <div class="sled-help-tooltip">{{ form.lens_type.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.lens_type.help_text|safe }}</div>
@@ -121,7 +137,11 @@ Update Lens {{ lens.name }}
                 <td>{{ form.lens_type }}</td>
               </tr>
               <tr>
-                <td>{{ form.source_type.errors }}</td>
+		<td>
+		  <div class="invalid jb-modal-field">
+		    {{ form.source_type.errors }}
+		  </div>
+                </td>
                 <td>
 		  <div class="sled-help-tooltip">{{ form.source_type.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.source_type.help_text|safe }}</div>
@@ -129,7 +149,11 @@ Update Lens {{ lens.name }}
                 <td>{{ form.source_type }}</td>
               </tr>
               <tr>
-                <td>{{ form.contaminant_type.errors }}</td>
+		<td>
+		  <div class="invalid jb-modal-field">
+		    {{ form.contaminant_type.errors }}
+		  </div>
+                </td>
                 <td>
 		  <div class="sled-help-tooltip">{{ form.contaminant_type.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.contaminant_type.help_text|safe }}</div>
@@ -137,7 +161,11 @@ Update Lens {{ lens.name }}
                 <td>{{ form.contaminant_type }}</td>
               </tr>
               <tr>
-                <td>{{ form.image_conf.errors }}</td>
+		<td>
+		  <div class="invalid jb-modal-field">
+		    {{ form.image_conf.errors }}
+		  </div>
+                </td>
                 <td>
 		  <div class="sled-help-tooltip">{{ form.image_conf.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.image_conf.help_text|safe }}</div>
@@ -145,7 +173,11 @@ Update Lens {{ lens.name }}
                 <td>{{ form.image_conf }}</td>
               </tr>
               <tr>
-                <td>{{ form.info.errors }}</td>
+		<td>
+		  <div class="invalid jb-modal-field">
+                    {{ form.info.errors }}
+		  </div>
+                </td>
                 <td colspan="2" style="text-align:center">{{ form.info }}</td>
               </tr>
             </table>
@@ -168,8 +200,10 @@ Update Lens {{ lens.name }}
 	      </tr>
               <tr>
                 <td style="text-align:center">
-		  {{ form.mugshot.errors }}
-                  {{ form.mugshot }}
+		  <div class="invalid jb-modal-field">
+		    {{ form.mugshot.errors }}
+                    {{ form.mugshot }}		    
+		  </div>
 		</td>
               </tr>
             </table>
