--- a/sled_papers/templates/sled_papers/paper_detail.html
+++ b/sled_papers/templates/sled_papers/paper_detail.html
@@ -12,10 +12,12 @@
     <p class="jb-heading-paper-title"> "{{ paper.title }}" </p>
     <p style="font-size:30px;"> <a href="{{ paper.get_ads_url }}">{{ paper.cite_as }}</a> </p>
     <p> Created at {{ paper.created_at }} by <a href="{{ paper.owner.get_absolute_url }}">{{paper.owner}}</a></p>
+    {% comment %}
     <button type="button" id="export-csv" disabled class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_papers:export-csv' paper.pk %}">
       <img src="{% static 'icons/cloud-arrow-down-fill.svg' %}">
       Export to csv
     </button>
+    {% endcomment %}
     <p> Contains the following <b>{{ Nlenses }}</b> lenses: </p>
   </div>
 
