--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -15,9 +15,9 @@
     {% endblock extrastyles %}
     
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous" type="text/javascript"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-    <script src="https://use.typekit.net/pkl4bli.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM" crossorigin="anonymous" type="text/javascript"></script>
+    <script src="https://use.typekit.net/pkl4bli.js" integrity="sha384-bkjD7gO2Z4bX2cz58e/rtES14WZizX+lSKUnUAUl7YpWkCJKtCab29AylnquGaJU" crossorigin="anonymous" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js" integrity="sha384-d3UHjPdzJkZuk5H3qKYMLRyWLAQBJbby2yr2Q58hXXtAGF8RSNO9jpLDlKKPv5v3" crossorigin="anonymous" type="text/javascript"></script>
     <script src="{% static 'js/global_search.js' %}" type="text/javascript"></script>
     <script type="text/javascript">
       WebFont.load({
